--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <title>Crussssh</title>
@@ -34,7 +34,7 @@
         <button id="no" type="button" class="btn btn-info btn-lg">Cậu mơ à :333 </button>
       </div>
     </div>
-    <audio src="./sound/sound.mp3" autoplay></audio>
+      <audio src="sound/sound.mp3" autoplay></audio>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
